# gdm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake  FetchGlad.cmake  FetchGladAllEXT.cmake
examples/: 01_helloWindow.cpp  02_manyCubes.cpp  CMakeLists.txt
src/: glewToGlad.cpp
